<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.adminmanagermvvm.feature.addUserInfo.viewmodel.SaveEmployeeInfoViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <TextView
            android:id="@+id/first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="48dp"
            android:text="@string/firstname"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/first_name_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/first_name_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@={viewmodel.firstname}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_name" />

        <TextView
            android:id="@+id/last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/lastname"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_name_value" />

        <EditText
            android:id="@+id/last_name_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@={viewmodel.lastname}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/last_name" />

        <TextView
            android:id="@+id/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phonenumber"
            app:layout_constraintStart_toStartOf="@+id/last_name_value"
            app:layout_constraintTop_toBottomOf="@+id/last_name_value" />

        <EditText
            android:id="@+id/phone_number_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@={viewmodel.phonenumber}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_number" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="@+id/phone_number_value"
            app:layout_constraintTop_toBottomOf="@+id/phone_number_value" />

        <EditText
            android:id="@+id/email_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@={viewmodel.email}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            app:layout_constraintStart_toStartOf="@+id/email_value"
            app:layout_constraintTop_toBottomOf="@+id/email_value" />

        <EditText
            android:id="@+id/address_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@={viewmodel.address}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address" />

        <TextView
            android:id="@+id/account_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_number"
            app:layout_constraintStart_toStartOf="@+id/address_value"
            app:layout_constraintTop_toBottomOf="@+id/address_value" />

        <EditText
            android:id="@+id/account_number_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@={viewmodel.accounnumber}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_number" />

        <TextView
            android:id="@+id/joining_salary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/joining_salary"
            app:layout_constraintStart_toStartOf="@+id/account_number_value"
            app:layout_constraintTop_toBottomOf="@+id/account_number_value" />

        <EditText
            android:id="@+id/joining_salary_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@={viewmodel.joinigsalary}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/joining_salary" />

        <Button
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:onClick="@{viewmodel::onbutton}"
            app:layout_constraintTop_toBottomOf="@id/joining_salary_value"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/button_bg_blue"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>